[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]


[[bin]]
name = "sheets__strivers_a2z_dsa_sheet__c_sorting__c_sorting_ii__e_quick_sort__partition_algorithm"
path = "src/bin/sheets/strivers_a2z_dsa_sheet/c_sorting/c_sorting_ii/e_quick_sort/partition_algorithm.rs"

[[bin]]
name = "sheets__strivers_a2z_dsa_sheet__c_sorting__c_sorting_ii__e_quick_sort__quicksort"
path = "src/bin/sheets/strivers_a2z_dsa_sheet/c_sorting/c_sorting_ii/e_quick_sort/quicksort.rs"
